force-app/main/default/objects/leaseworks__Fx_Assembly_Event_Input__c/leaseworks__Fx_Assembly_Event_Input__c.object-meta.xml
<CustomObject>
    <label>Fx Assembly Event Input</label>
    <nameField>
        <label>Fx Assembly Event Input Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fx Assembly Event Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>