force-app/main/default/objects/leaseworks__Fx_Assembly_Event_Input__c/fields/leaseworks__Assembly__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assembly__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assembly</label>
    <referenceTo>leaseworks__Constituent_Assembly__c</referenceTo>
    <relationshipLabel>Fx Assembly Event Inputs</relationshipLabel>
    <relationshipName>Fx_Assembly_Event_Inputs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>