force-app/main/default/objects/leaseworks__Fx_Assembly_Event_Input__c/fields/leaseworks__Assembly_MR_Info__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assembly_MR_Info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplemental Rent</label>
    <referenceTo>leaseworks__Assembly_MR_Rate__c</referenceTo>
    <relationshipLabel>Fx Assembly Event Inputs</relationshipLabel>
    <relationshipName>Fx_Assembly_Event_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>