force-app/main/default/objects/leaseworks__Fx_Assembly_Event_Input__c/fields/leaseworks__AVG_FC__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__AVG_FC__c</fullName>
    <label>AVG FC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>