force-app/main/default/objects/leaseworks__Fx_Assembly_Event_Input__c/fields/leaseworks__Base_MRR__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Base_MRR__c</fullName>
    <label>Base MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>