force-app/main/default/objects/leaseworks__Fx_Assembly_Event_Input__c/fields/leaseworks__Interval_2_Hours__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Interval_2_Hours__c</fullName>
    <label>Interval 2(Hours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>