force-app/main/default/objects/leaseworks__Fx_Assembly_Event_Input__c/fields/leaseworks__Last_Escalation_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Last_Escalation_Date__c</fullName>
    <label>Last Escalation Date</label>
    <type>Date</type>
</CustomField>