force-app/main/default/objects/leaseworks__Fx_Assembly_Event_Input__c/fields/leaseworks__Lessor_Contribution__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessor_Contribution__c</fullName>
    <label>Lessor Contribution</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>