force-app/main/default/objects/leaseworks__Fx_Assembly_Event_Input__c/fields/leaseworks__Projected_Event__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Projected_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Projected Event</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>leaseworks__Assembly_Event_Info__c.leaseworks__Sequence__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filterItems>
        <filterItems>
            <field>leaseworks__Assembly_Event_Info__c.leaseworks__Sequence__c</field>
            <operation>equals</operation>
            <value />
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Assembly_Event_Info__c</referenceTo>
    <relationshipLabel>Fx Assembly Event Inputs</relationshipLabel>
    <relationshipName>Fx_Assembly_Event_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>