force-app/main/default/objects/leaseworks__Fx_Assembly_Event_Input__c/fields/leaseworks__Ratio_Table__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Ratio_Table__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Ratio Table</description>
    <inlineHelpText>Lookup to Ratio Table</inlineHelpText>
    <label>Ratio Table</label>
    <referenceTo>leaseworks__Ratio_Table__c</referenceTo>
    <relationshipLabel>Fx Assembly Event Inputs</relationshipLabel>
    <relationshipName>Fx_Assembly_Event_Inputs</relationshipName>
    <type>Lookup</type>
</CustomField>