force-app/main/default/objects/leaseworks__Fx_Assembly_Event_Input__c/fields/leaseworks__RC_Months__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__RC_Months__c</fullName>
    <label>RC Months</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>