force-app/main/default/objects/leaseworks__Fx_Assembly_Event_Input__c/fields/leaseworks__Starting_MR_Balance__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Starting_MR_Balance__c</fullName>
    <label>Starting MR Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>